--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -17,7 +17,7 @@ h5 {
 .card-border-left-purple {
     border-left: solid;
     border-left-width: 7px;
-    border-left-color: #594a9b;
+    border-left-color: #6687f2;
 }
 
 .card-border-left-green {
@@ -30,10 +30,11 @@ h5 {
     border-bottom: solid;
     border-bottom-width: 7px;
     border-bottom-color: #eca51f;
+    border-radius: 1%;
 }
 
 .text-purple {
-    color: #594a9b !important;
+    color: #61a1ff !important;
     font-weight: 500;
 }
 
@@ -42,23 +43,102 @@ h5 {
     font-weight: 500;
 }
 
-.img-cirle-md {
-    border-radius: 50% !important;
-    padding: 5px;
-    border: solid 2px #b5b6bc;
-    object-fit: cover;
-}
-
-.img-cirle-sm {
-    border-radius: 50% !important;
-    padding: 2px;
-    border: solid 2px #b5b6bc;
-    object-fit: cover;
-}
-
 .text-justify {
-       text-align: justify; 
+    text-align: justify;
 }
 
+.background-skills {
+    background-color: #FFFFFF;
+    color: #272532 !important;
+    padding: 65px;
+}
 
+.background-teste {
+    background: #1d1d1d;
+    color: #FFFFFF;
+    height: 91vh;
+    min-height: 91vh;
+}
 
+/* .background-teste > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
+
+@media only screen and (max-width: 468px) {
+    .background-teste {
+        background: #1a1c23;
+        color: #FFFFFF;
+        height: 140vh !important;
+        min-height: 140vh !important;
+        ;
+    }
+}
+
+.section-title {
+    font-size: 35pt;
+    font-weight: 700;
+}
+
+.section-title-lg {
+    font-size: 5em;
+    font-weight: 700;
+}
+
+.margin-top {
+    margin-top: 5%;
+}
+
+.text-warning-hover:hover {
+    color: #ecb22e !important;
+}
+
+.background-contact {
+    background-color: #594a9b;
+    color: #FFFFFF;
+}
+
+.background-contact-title {
+    font-weight: 800 !important;
+    font-size: 4rem;
+}
+
+.img-rocket-contact {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.vertical-alignment {
+    vertical-align: baseline;
+}
+
+.background-dark {
+    background: #1c1c1c;
+    color: #FFFFFF;
+}
+
+.card-education-teste {
+    background-color: #303134;
+    color: #FFFFFF !important;
+}
+
+.card-education-teste > .card-body  {
+    color: #FFFFFF !important;
+}
+
+.card-education-teste > .card-body > .card-title  {
+    color: #FFFFFF !important;
+}
+
+.card-hover:hover {
+    color: #61a1ff !important;
+    cursor: pointer;
+}
+
+.card-hover:hover > .card-title {
+    color: #61a1ff !important;
+}
