Add call for papers page

--- a/src/components/Blog/style.css
+++ b/src/components/Blog/style.css
@@ -3,15 +3,12 @@
     min-height: 100%;
 }
 
-.post-card.skeleton .hide-text {
-    background: #e2e2e2;
-    color: transparent;
-    position: relative;
-    overflow: hidden;
+.font-size-3em {
+    font-size: 0.3em !important;
 }
 
 .hide-text-img-top {
-    height: 120px;;
+    height: 120px;
 }
 
 .hide-text-md {
@@ -20,6 +17,13 @@
 
 .hide-text-lg {
     width: 100%;
+}
+
+.post-card.skeleton .hide-text {
+    background: #e2e2e2;
+    color: transparent;
+    position: relative;
+    overflow: hidden;
 }
 
 .post-card.skeleton .hide-text::before {
@@ -34,11 +38,7 @@
     filter: blur(5px);
 }
 
-.font-size-3em {
-    font-size: 0.3em !important;
-}
-
-.text-muted > svg{
+.text-muted>svg {
     vertical-align: middle;
 }
 
@@ -50,9 +50,4 @@
     to {
         left: 100%;
     }
-}
-
-.card-teste {
-    background-color: #303134;
-    
 }
